# ScaleFreeNet

./: .gitignore
data_plot/: Cargo.toml
data_plot/src/: lib.rs
notebooks/: failure_tolerance.ipynb  graph_degree_distributions.ipynb  properties.ipynb  real_world_graphs.ipynb
notebooks/dd/: astro.txt  beer.txt  condmat.txt  higgs.txt
